K8s/Auth_deployment_by_configmap.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: auth-service
  name: auth-service
spec:
  replicas: 1
  selector:
    matchLabels:
      app: auth-service
  strategy: {}
  template:
    metadata:

      labels:
        app: auth-service
    spec:
      containers:
        - env:
            - name: SPRING_PROFILES_ACTIVE
              value: stage
            - name: DB_HOST
              valueFrom:
                configMapKeyRef:
                  name: db-config
                  key: host
            - name: DB_PORT
              value: "3306"
            - name: DB_USER
              valueFrom:
                secretKeyRef:
                  name: mysql-secrets
                  key: username
            - name: DB_PASSWORD
              valueFrom:
                secretKeyRef:
                  name: mysql-secrets
                  key: password
            - name: DB_NAME
              valueFrom:
                configMapKeyRef:
                  name: db-config
                  key: dbName
          image: chanudocker1/auth-service:1.0.0
          name: auth-service
          ports:
            - containerPort: 8088
          resources: {}
      restartPolicy: Always
status: {}
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: auth-service
  name: auth-service
spec:
  type: NodePort
  ports:
    - name: "8088"
      port: 8088
      targetPort: 8088
      nodePort: 30077
  selector:
    app: auth-service
status:
  loadBalancer: {}
