K8s/Discovery_deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: discovery-server
  name: discovery-server
spec:
  replicas: 1
  selector:
    matchLabels:
      app: discovery-server
  strategy: {}
  template:
    metadata:

      labels:
        app: discovery-server
    spec:
      containers:
        - env:
#            - name: SPRING_PROFILES_ACTIVE
#              value: docker
          image: chanudocker1/eureka-server:1.0.0
          name: discovery-server
          ports:
          - containerPort: 8761
          resources: {}
      restartPolicy: Always
status: {}
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: discovery-server
  name: discovery-server
spec:
  type: NodePort
  ports:
    - name: "8761"
      port: 8761
      targetPort: 8761
      nodePort: 30076
  selector:
    app: discovery-server
status:
  loadBalancer: {}
