K8s/Order_deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: order-service
  name: order-service
spec:
  replicas: 1
  selector:
    matchLabels:
      app: order-service
  strategy: {}
  template:
    metadata:

      labels:
        app: order-service
    spec:
      containers:
        - env:
            - name: EUREKA_INSTANCE_PREFERIPADDRESS
              value: "true"         
          image: chanudocker1/order-service:1.0.0
          name: order-service
          ports:
            - containerPort: 8092
          resources: {}
      restartPolicy: Always
status: {}
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: order-service
  name: order-service
spec:
  type: NodePort
  ports:
    - name: "8092"
      port: 8092
      targetPort: 8092
      nodePort: 30079
  selector:
    app: order-service
status:
  loadBalancer: {}
