K8s/Product_deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: product-service
  name: product-service
spec:
  replicas: 1
  selector:
    matchLabels:
      app: product-service
  strategy: {}
  template:
    metadata:

      labels:
        app: product-service
    spec:
      containers:
        - env:
            - name: EUREKA_INSTANCE_PREFERIPADDRESS
              value: "true"         
          image: chanudocker1/product-service:1.0.0
          name: product-service
          ports:
            - containerPort: 8093
          resources: {}
      restartPolicy: Always
status: {}
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: product-service
  name: product-service
spec:
  type: NodePort
  ports:
    - name: "8093"
      port: 8093
      targetPort: 8093
      nodePort: 30080
  selector:
    app: product-service
status:
  loadBalancer: {}
