K8s/app-ingress -localhost.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: auth-service-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$2
spec:
  rules:
  - host: localhost
    http:
      paths:
      - path: /as(/|$)(.*)
        pathType: ImplementationSpecific
        backend:
          service:
            name: auth-service
            port:
              number: 8088
      - path: /ds(/|$)(.*)
        pathType: ImplementationSpecific
        backend:
          service:
            name: discovery-service
            port:
              number: 8761
